@@ -351,7 +351,7 @@ int main(int argc, char* argv[])
   
   
   clock_t time3 = clock();
-  if(run.beVerbose>=2) { 
+  if(run.beVerbose>=1) { 
     printf("   Timing:\n");
     if(run.doMCMC>=1) {
       printf("     initialisation:%10.2lfs\n", ((double)time1 - (double)time0)*1.e-6 );
